--- a/experiences.html
+++ b/experiences.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Expériences Jessica</title>
-    <link href="style2.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div class="global">
         <div class="scroll">
             <div class="scroll_color">
                 <div class="avatar">
-                    <img src="images/bellette.png" width="200" height="200" onmouseover="this.src='images/bellettec.png';" onmouseout="this.src='images/bellette.png'" alt="Avatar" />
+                    <img src="images/bellette.svg" width="200" height="200" onmouseover="this.src='images/bellettec.svg';" onmouseout="this.src='images/bellette.png'" alt="Avatar" />
                 </div>
                 <div class="nom">
                     <h1>Jessica <br> Da Silva Cunha </h1>
-                    <p class="civil">Développeuse web/web mobile</p>
+                    <!--<p class="civil">Développeuse web/web mobile</p>
                     <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
-                    <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
-                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.png" alt="CV" width="30" height="25" class="civil"></a>
+                    <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>-->
+                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.svg" alt="CV" width="30" height="25" class="civil"></a>
                 </div>
             </div>
         </div>
@@ -30,63 +30,94 @@
 		            <ul>
                         <li>
                             <div class='time'>
-                                <span>Alternance</span>
+                                <span>Assistante d'agence</span>
                             </div>
                             <div class="content">
-                                <h3>2021</h3>
-                                <p>1 an chez vous ?</p>
+                                <h3>De 2024 à 2025</h3>
+                                <p>Forum interim (10mois)</p>
                             </div>
 			            </li>
                         <li>
                             <div class='time'>
-                                <span>Codage</span>
+                                <span>CIP</span>
                             </div>
                             <div class="content">
-                                <h3>2020</h3>
-                                <p>2 mois à Hélix construction (stage)</p>
+                                <h3>De 2023 à 2024</h3>
+                                <p>Mode 83 (8 mois)</p>
                             </div>
 			            </li>
 			            <li>
                             <div class='time'>
-                                <span>Recrutement</span>
+                                <span>Chargée de recrutement</span>
                             </div>
                             <div class="content">
-                                <h3>De 2018 à 2019</h3>
-                                <p>3 mois à Welljob, (68)</p>
-                                <p>7 mois à Manpower, (68)</p>
+                                <h3>De 2022 à 2023</h3>
+                                <p>Adecco (10 mois)</p>
                             </div>
 			            </li>			
 			            <li>
                             <div class='time'>
-                                <span>Administratif</span>
+                                <span>Assistante commerciale</span>
                             </div>
                             <div class="content">
-                                <h3>De 2014 à 2020</h3>
-                                <p>1 mois à Champa auto école, (39)</p>
-                                <p>2 mois à Bubendorff, (68)</p>
-                                <p>21 mois à la DGFiP, (39)</p>                         
-                                <p>6 mois à Pôle emploi, (39)</p>
-                                <p>10 mois bénévole en association, (39)</p>
-                                <p>Divers missions (25)(39)</p>         
+                                <h3>De 2021 à 2022</h3>
+                                <p>Girod média (6 mois)</p> 
                             </div>
                         </li>
                         <li>
                             <div class='time'>
-                                <span>Restauration</span>
+                                <span>Assistante RH</span>
                             </div>
                             <div class="content">
-                                <h3>De 2013 à 2014</h3>
-                                <p>7 mois à "Le Restaurant", (39)</p>
-                                <p>4 mois à "L'Iris", (39)</p>       
+                                <h3>2021</h3>
+                                <p>Cérélia (2 mois)</p>       
                             </div>
                         </li>
                         <li>
                             <div class='time'>
-                                <span>Vente</span>
+                                <span>Accueil / Secrétariat</span>
                             </div>
                             <div class="content">
-                                <h3>De 2011 à 2014</h3>
-                                <p>Divers missions intérim / stages, (39)</p>                    
+                                <h3>2020</h3>
+                                <p>Champa Auto École (1mois)</p>                    
+                            </div>
+                        </li>
+                        <li>
+                            <div class='time'>
+                                <span>Chargée de recrutement</span>
+                            </div>
+                            <div class="content">
+                                <h3>2019</h3>
+                                <p>Welljob (2 mois)</p>           
+                                <h3>De 2018 à 2019</h3>
+                                <p>Manpower (8 mois)</p>              
+                            </div>
+                        </li>
+                        <li>
+                            <div class='time'>
+                                <span>Standardiste</span>
+                            </div>
+                            <div class="content">
+                                <h3>2018</h3>
+                                <p>Bubbendorff (2 mois)</p>        
+                            </div>
+                        </li>
+                        <li>
+                            <div class='time'>
+                                <span>Accueil / Secrétariat</span>
+                            </div>
+                            <div class="content">
+                                <h3>De 2016 à 2018</h3>
+                                <p>DGFiP (21 mois)</p>        
+                            </div>
+                        </li>
+                        <li>
+                            <div class='time'>
+                                <span>Accueil / Administratif</span>
+                            </div>
+                            <div class="content">
+                                <h3>2016</h3>
+                                <p>Pôle Emploi (8 mois en service civique)</p>        
                             </div>
                         </li>
 		            </ul>
@@ -94,12 +125,12 @@
             </div>
             <div class="sidebar">
                 <ul>
-                    <li><a href="index.html"><img src="images/home.png" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
-                    <li><a href="competences.html"><img src="images/competence.png" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
-                    <li><a href="formations.html"><img src="images/formation.png" width="32" height="32" alt="Formations"/><span class="infobulle" >Formations</span></a></li>
-                    <li class="en_cours"><a href="experiences.html"><img src="images/experience.png" width="32" height="32" alt="Expériences" /><span class="infobulle" >Expériences</span></a></li>
-                    <li><a href="portfolio.html"><img src="images/portfolio.png" width="32" height="32" alt="Portfolio"/><span class="infobulle" >Portfolio</span></a></li>
-                    <li><a href="contact.html"><img src="images/contact.png" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
+                    <li><a href="index.html"><img src="images/home.svg" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
+                    <li><a href="competences.html"><img src="images/competence.svg" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
+                    <li><a href="formations.html"><img src="images/formation.svg" width="32" height="32" alt="Formations"/><span class="infobulle" >Formations</span></a></li>
+                    <li class="en_cours"><a href="experiences.html"><img src="images/experience.svg" width="32" height="32" alt="Expériences" /><span class="infobulle" >Expériences</span></a></li>
+                    <li><a href="motivation.html"><img src="images/motivation.svg" width="32" height="32" alt="Motivation"/><span class="infobulle" >Motivation</span></a></li>
+                    <li><a href="contact.html"><img src="images/contact.svg" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
                 </ul>
                 <div class="sidebar_end"></div>
             </div>
