--- a/formations.html
+++ b/formations.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Formations Jessica</title>
-    <link href="style2.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div class="global">
         <div class="scroll">
             <div class="scroll_color">
                 <div class="avatar">
-                    <img src="images/bellette.png" width="200" height="200" onmouseover="this.src='images/bellettec.png';" onmouseout="this.src='images/bellette.png'" alt="Avatar" />
+                    <img src="images/bellette.svg" width="200" height="200" onmouseover="this.src='images/bellettec.svg';" onmouseout="this.src='images/bellette.svg'" alt="Avatar" />
                 </div>
                 <div class="nom">
                     <h1>Jessica <br> Da Silva Cunha </h1>
-                    <p class="civil">Développeuse web/web mobile</p>
+                    <!--<p class="civil">Développeuse web/web mobile</p>
                     <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
-                    <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
-                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.png" alt="CV" width="30" height="25" class="civil"></a>
+                    <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>-->
+                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.svg" alt="CV" width="30" height="25" class="civil"></a>
                 </div>
             </div>
         </div>
@@ -33,105 +33,48 @@
                                 <span>En cours</span>
                             </div>
                             <div class="content">
-                                <h3>Bac +3 "Conceptrice développeuse<br>d'applications</h3>
-                                <p>Onlineformapro, Besançon (25)</p>
+                                <h3>MOOC Certifiants</h3>
+                                <p><a href="https://openclassrooms.com/fr/dashboard/courses">OpenClassrooms</a> (en ligne)</p>
                             </div>
 			            </li>
 			            <li>
                             <div class='time'>
-                                <span>Janvier 2021</span>
+                                <span>De 2020 à 2021</span>
                             </div>
                             <div class="content">
-                                <h3>Titre professionnel "Développeur Web"</h3>
+                                <h3>Titre professionnel BAC+2 <br>"Développeur Web"</h3>
                                 <p>Onlineformapro, Besançon (25)</p>
                             </div>
 			            </li>			
 			            <li>
                             <div class='time'>
-                                <span>Juin 2020</span>
-                            </div>
-                            <div class="content">
-                                <h3>MOOC certifiants <a href="https://openclassrooms.com/fr/dashboard/courses">OpenClassrooms</a></h3>
-                                <p>"Découvrez le fonctionnement<br>des algorithmes"</p><br>
-                                <p>"Apprenez à créer votre site<br>web avec HTML5 et CSS3 "</p><br>
-                                <p>"Découvrez le monde<br>des Systèmes d’Informations"</p><br>                           
-                                <p>"Créer des visuels avec Illustrator"</p>           
-                            </div>
-                        </li>
-                        <li>
-                            <div class='time'>
-                                <span>Mai 2020</span>
-                            </div>
-                            <div class="content">
-                                <h3>MOOC non certifiant <a href="https://openclassrooms.com/fr/dashboard/courses">OpenClassrooms</a></h3>
-                                <p>"Dynamisez votre site web avec<br>JavaScript"</p>           
-                            </div>
-                        </li>
-                        <li>
-                            <div class='time'>
-                                <span>Mars 2020</span>
+                                <span>De 2019 à 2020</span>
                             </div>
                             <div class="content">
                                 <h3>Dispositif en Amont de la Qualification</h3>
-                                <p>Gréta du Jura, Champagnole (39)</p>                    
+                                <p>Greta Champagnole (39)</p>       
                             </div>
                         </li>
                         <li>
                             <div class='time'>
-                                <span>Nov 2019</span>
+                                <span>De 2014 à 2015</span>
                             </div>
                             <div class="content">
-                                <h3>MOOC non certifiant <a href="https://openclassrooms.com/fr/dashboard/courses">OpenClassrooms</a></h3>
-                                <p>"Apprenez à lire un bulletin de paie"</p>                    
+                                <h3>Employé administratif et accueil <br>(option comptabilité)</h3>
+                                <p>Greta Besançon (25)</p>           
                             </div>
                         </li>
-                        <li>
-                            <div class='time'>
-                                <span>Sep 2018</span>
-                            </div>
-                            <div class="content">
-                                <h3>MOOC certifiant <a href="https://openclassrooms.com/fr/dashboard/courses">OpenClassrooms</a></h3>
-                                <p>"Réalisez des opérations<br>courantes de comptailité"</p>                    
-                            </div>
-                        </li>
-                        <li>
-                            <div class='time'>
-                                <span>Juillet 2015</span>
-                            </div>
-                            <div class="content">
-                                <h3>Employé administratif et accueil</h3>
-                                <p>Gréta du Doubs, Besançon (25)</p>                    
-                            </div>
-                        </li>
-                        <li>
-                            <div class='time'>
-                                <span>Octobre 2014</span>
-                            </div>
-                            <div class="content">
-                                <h3>Restauration</h3>
-                                <p>CFA du Jura, Gevingey (39)</p>                    
-                            </div>
-			            </li>
-                        <li>
-                            <div class='time'>
-                                <span>Juin 2013</span>
-                            </div>
-                            <div class="content">
-                                <h3>Tourneur d'art sur bois</h3>
-                                <p>Lycée Pierre Vernotte, Moirans (39)</p>                    
-                            </div>
-			            </li>
-		            </ul>
+                    </ul>
                 </div>
             </div>
             <div class="sidebar">
                 <ul>
-                    <li><a href="index.html"><img src="images/home.png" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
-                    <li><a href="competences.html"><img src="images/competence.png" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
-                    <li class="en_cours"><a href="formations.html"><img src="images/formation.png" width="32" height="32" alt="Formations"/><span class="infobulle" class="en_cours" >Formations</span></a></li>
-                    <li><a href="experiences.html"><img src="images/experience.png" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
-                    <li><a href="portfolio.html"><img src="images/portfolio.png" width="32" height="32" alt="Portfolio"/><span class="infobulle" >Portfolio</span></a></li>
-                    <li><a href="contact.html"><img src="images/contact.png" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
+                    <li><a href="index.html"><img src="images/home.svg" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
+                    <li><a href="competences.html"><img src="images/competence.svg" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
+                    <li class="en_cours"><a href="formations.html"><img src="images/formation.svg" width="32" height="32" alt="Formations"/><span class="infobulle" class="en_cours" >Formations</span></a></li>
+                    <li><a href="experiences.html"><img src="images/experience.svg" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
+                    <li><a href="motivation.html"><img src="images/motivation.svg" width="32" height="32" alt="Motivation"/><span class="infobulle" >Motivation</span></a></li>
+                    <li><a href="contact.html"><img src="images/contact.svg" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
                 </ul>
                 <div class="sidebar_end"></div>
             </div>
