--- a/index.html
+++ b/index.html
@@ -4,44 +4,42 @@
 		<meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-		<title>Jessica Da Silva</title>
+		<title>Jessica Da Silva Cunha</title>
 	</head>
 	<body>	
 		<div class="container">
             <div class="wrap_content">
                 <div class="etat_civil">
                     <div class="avatar">
-                        <p><img src="images/bellette.png" width="200" height="200" onmouseover="this.src='images/bellettec.png';" onmouseout="this.src='images/bellette.png'" alt="Avatar" /></p>
+                        <p><img src="images/bellette.svg" width="200" height="200" onmouseover="this.src='images/bellettec.svg';" onmouseout="this.src='images/bellette.svg'" alt="Avatar" /></p>
                     </div>
                     <div>
-                        <h1>Jessica Da Silva Cunha </h1>
-                        <p class="civil">Conceptrice développeuse d'applications</p>
+                        <h1>Jessica Da Silva Cunha</h1>
+                        <!--<p class="civil"></p>
                         <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
-                        <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
-                        <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.png" alt="CV" width="30" height="25" class="civil"></a>
+                        <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>-->
+                        <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.svg" alt="CV" width="30" height="25" class="civil"></a>
                     </div>
                 </div>
                 <div class="about">
-                    <h2 class="me">About me</h2>
+                    <h2 class="me">À propos de moi</h2>
                     <div class="info">
                         <h3>Présentation</h3>
-                        <p>Actuellement à la recherche d'une entreprise d'accueil en alternance au rythme de 3 semaines en entreprise, 1 semaine en centre de formation. Afin de préparer un Bac+3 "Conceptrice développeuse d'applications" au CFA d'<a href="https://www.onlineformapro.com/" target="_blank">onlineformapro</a>. Titulaire du permis B et n'étant phobique ni des déplacements, ni du télétravail, je suis prête à envisager un poste partout en France ou en Suisse. Âgée de 26 ans je suis éligible à l'<a href="https://www.service-public.fr/professionnels-entreprises/vosdroits/F23556" target="_blank">aide exceptionnelle aux contrats en alternance</a>, je suis également reconnue travailleuse handicapée, sans aménagement de poste, ce qui permets de cumuler l'aide des alternants à celle de l'<a href="https://www.agefiph.fr/alternance">agefiph</a>.</p>
+                        <p>À la recherche d’un poste en comptabilité 100 % télétravail. Reconnue travailleuse handicapée – mon corps aime le confort de la maison, mais ma rigueur, ma curiosité et ma motivation vont toujours plus loin. Organisée, adaptable, et passionnée par l’analyse, je cherche un poste stimulant, humain et compatible avec une vie équilibrée.</p>
                     </div>
                     <div class="info">
                         <h3>Informations personnelles</h3>
                         <div class="cont_info">
                             <div class="crt_info">
                                 <ul class="perso">
-                                <li><img src="images/datenaissance.png" width="25" height="25"> 12 août 1994</li>
-                                <li><img src="images/localisation.png" width="25" height="25"> Andelot-en-Montagne, jura (39)</li>
-                                <li><img src="images/mail.png" width="30" height="25"> <a href="mailto:dasilvacjessica@gmail.com"> M'envoyer un mail</a></li>
+                                <li><img src="images/localisation.svg" width="25" height="25"> Var (83)</li>
+                                <li><img src="images/mail.svg" width="30" height="25"> <a href="mailto:dasilvacjessica@gmail.com"> M'envoyer un mail</a></li>
                                 </ul>
                             </div>
                             <div class="crt_infos">
                                 <ul class="persos">
-                                <li><img src="images/tel.png" width="25" height="25"> <a href="tel:0614228431"> M'appeler</a></li>
-                                <li><img src="images/ok.png" width="25" height="25"> Accepte télétravail et semi-télétravail</li>
-                                <li><img src="images/ok.png" width="25" height="25"> Éligible aux aides de l'état et de l'agefiph concernants les contrats en alternances</li>
+                                <li><img src="images/ok.svg" width="25" height="25"> Accepte télétravail uniquement</li>
+                                <li><img src="images/ok.svg" width="25" height="25"> Éligible aux aides de l'état et de l'agefiph concernants les contrats MDPH</li>
                             </ul>
                             </div>
                         </div>                        
@@ -50,17 +48,17 @@
                         <div class="skill">
                             <h3>Soft skill</h3>
                             <ul class="perso">
-                                <li><img src="images/ok.png" width="25" height="25"> Sens de l'organisation</li>
-                                <li><img src="images/ok.png" width="25" height="25"> Autonome</li>
-                                <li><img src="images/ok.png" width="25" height="25"> Curieuse </li>
+                                <li><img src="images/ok.svg" width="25" height="25"> Sens de l'organisation</li>
+                                <li><img src="images/ok.svg" width="25" height="25"> Autonome</li>
+                                <li><img src="images/ok.svg" width="25" height="25"> Epistémophile </li>
                         </ul>
                         </div>
                         <div class="valeur">
                             <h3>Valeurs professionnelles</h3>
                             <ul class="persos">
-                                <li><img src="images/ok.png" width="25" height="25"> Stimulation intellectuel</li>
-                                <li><img src="images/ok.png" width="25" height="25"> L'amélioration continue</li>
-                                <li><img src="images/ok.png" width="25" height="25"> Harmonie </li>
+                                <li><img src="images/ok.svg" width="25" height="25"> Stimulation intellectuel</li>
+                                <li><img src="images/ok.svg" width="25" height="25"> L'amélioration continue</li>
+                                <li><img src="images/ok.svg" width="25" height="25"> L'autonomie </li>
                             </ul>                        
                         </div>                        
                     </div>
@@ -70,16 +68,16 @@
                             <div class="cont_loisir">
                                 <div class="crt_loisir">
                                     <ul class="perso">
-                                        <li><img src="images/cerveau.png" width="35" height="35"> Épistémophile</li>
-                                        <li><img src="images/livre.jpg" width="35" height="35"> Lecture</li>
-                                        <li><img src="images/plume.png" width="35" height="35"> Écriture </li>
+                                        <li><img src="images/cerveau.svg" width="35" height="35"> Apprendre</li>
+                                        <li><img src="images/livre.svg" width="35" height="35"> Lecture</li>
+                                        <li><img src="images/plume.svg" width="35" height="35"> Découvrir </li>
                                 </ul>
                                 </div>
                                 <div class="crt">
                                     <ul class="perso">
-                                        <li><img src="images/film.png" width="35" height="35"> L'audio/visuel</li>
-                                        <li><img src="images/jeux.png" width="35" height="35"> Jeux de société/ Jeux vidéo</li>
-                                        <li><img src="images/creativite.png" width="35" height="35"> Création </li>
+                                        <li><img src="images/film.svg" width="35" height="35"> L'audio/visuel</li>
+                                        <li><img src="images/jeux.svg" width="35" height="35"> Jeux de société/ Jeux vidéo</li>
+                                        <li><img src="images/creativite.svg" width="35" height="35"> Création </li>
                                     </ul>
                                 </div>                                
                             </div>  
@@ -89,12 +87,12 @@
             </div>
             <div class="sidebar">
                 <ul>
-                    <li class="en_cours"><a href="index.html"><img src="images/home.png" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
-                    <li><a href="competences.html"><img src="images/competence.png" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
-                    <li><a href="formations.html"><img src="images/formation.png" width="32" height="32" alt="Formations"/><span class="infobulle" >Formations</span></a></li>
-                    <li><a href="experiences.html"><img src="images/experience.png" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
-                    <li><a href="portfolio.html"><img src="images/portfolio.png" width="32" height="32" alt="Portfolio"/><span class="infobulle" >Portfolio</span></a></li>
-                    <li><a href="contact.html"><img src="images/contact.png" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
+                    <li class="en_cours"><a href="index.html"><img src="images/home.svg" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
+                    <li><a href="competences.html"><img src="images/competence.svg" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
+                    <li><a href="formations.html"><img src="images/formation.svg" width="32" height="32" alt="Formations"/><span class="infobulle" >Formations</span></a></li>
+                    <li><a href="experiences.html"><img src="images/experience.svg" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
+                    <li><a href="motivation.html"><img src="images/motivation.svg" width="32" height="32" alt="Motivation"/><span class="infobulle" >Motivation</span></a></li>
+                    <li><a href="contact.html"><img src="images/contact.svg" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
                 </ul>
                 <div class="sidebar_end"></div>
             </div>
