--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="global">
-<!--Block qui suit le scroll-->
+Block qui suit le scroll
         <div class="scroll">
             <div class="scroll_color">
                 <div class="avatar">
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-<!--End - Block qui suit le scroll-->
+End - Block qui suit le scroll
         <div class="container">
             <div class="wrap_content">
                 <div class="crt-container-sm">
@@ -35,7 +35,7 @@
                                     <h2 class="title-lg text-upper padd-box">Portfolio</h2>
                                     <div class="pf-grid">
                                         <div class="pf-grid-sizer"></div>
-<!--Aperçus projet 1-->
+Aperçus projet 1
                                             <div class="pf-grid-item photography">
                                                 <a class="pf-project" href="#pf-popup-1">
                                                     <div class="pf-figure">
@@ -58,8 +58,8 @@
                                                     </div>
                                                 </a>                                               
                                             </div>
-<!--End - Aperçus projet 1-->
-<!--Aperçus projet 2
+End - Aperçus projet 1
+Aperçus projet 2
                                             <div class="pf-grid-item photography">
                                                 <a class="pf-project" href="#pf-popup-1">
                                                     <div class="pf-figure">
@@ -82,7 +82,7 @@
                                                     </div>
                                                 </a>                                               
                                             </div>
-<!--End - Aperçus projet 2-->
+End - Aperçus projet 2
                                         </div>  
                                     </div>
                                 </section>
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-<!--Pop up détails projet 1-->
+Pop up détails projet 1
                 <div role="dialog" aria-labelledby="dialog-title" aria-describedby="dialog-desc" aria-modal="true" aria-hidden="true" tabindex="-1" class="c-dialog">
                     <div role="document" class="c-dialog_box">
                         <button class="fermer" type="button" aria-label="Fermer" title="Fermer" data-dismiss="dialog">X</button>
@@ -102,8 +102,8 @@
                         <a class="projetc" href="https://jessicad.promo-39.codeur.online/gardien/" target="blank">Lien du projet complet</a>
                     </div>
                 </div>
-<!--End - Pop up détails projet 1-->
-<!--Pop up détails projet 2
+End - Pop up détails projet 1
+op up détails projet 2
                 <div role="dialog" aria-labelledby="dialog-title" aria-describedby="dialog-desc" aria-modal="true" aria-hidden="true" tabindex="-1" class="c-dialog">
                     <div role="document" class="c-dialog_box">
                         <button class="fermer" type="button" aria-label="Fermer" title="Fermer" data-dismiss="dialog">X</button>
@@ -113,23 +113,24 @@
                         <a class="projetc" href="https://jessicad.promo-39.codeur.online/gardien/" target="blank">Lien du projet complet</a>
                     </div>
                 </div>
-<!--End - Pop up détails projet 2-->
-<!--Barre de naviguation-->                
+End - Pop up détails projet 2
+Barre de naviguation             
                 <div class="sidebar">
                     <ul>
                         <li><a href="index.html"><img src="images/home.png" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
                         <li><a href="competences.html"><img src="images/competence.png" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
                         <li><a href="formations.html"><img src="images/formation.png" width="32" height="32" alt="Formations"/><span class="infobulle">Formations</span></a></li>
                         <li><a href="experiences.html"><img src="images/experience.png" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
-                        <li class="en_cours"><a href="portfolio.html"><img src="images/portfolio.png" width="32" height="32" alt="Portfolio"/><span class="infobulle"  class="en_cours">Portfolio</span></a></li>
+                        <li><a href="motivation.html"><img src="images/motivation.svg" width="32" height="32" alt="Motivation"/><span class="infobulle" >Motivation</span></a></li>
                         <li><a href="contact.html"><img src="images/contact.png" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
                     </ul>
                     <div class="sidebar_end"></div>
                 </div>
-<!--End - Barre de naviguation-->                
+End - Barre de naviguation             
             </div>
         </div>
     </div>                                          
     <script src="script.js"></script>
 </body>
 </html>
+-->
