--- a/competences.html
+++ b/competences.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Compétences Jessica</title>
-    <link href="style2.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div class="global">
         <div class="scroll">
             <div class="scroll_color">
                 <div class="avatar">
-                    <img src="images/bellette.png" width="200" height="200" onmouseover="this.src='images/bellettec.png';" onmouseout="this.src='images/bellette.png'" alt="Avatar" />
+                    <img src="images/bellette.svg" width="200" height="200" onmouseover="this.src='images/bellettec.svg';" onmouseout="this.src='images/bellette.svg'" alt="Avatar" />
                 </div>
                 <div class="nom">
                     <h1>Jessica <br> Da Silva Cunha </h1>
-                    <p class="civil">Développeuse web/web mobile</p>
-                    <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
-                    <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
-                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.png" alt="CV" width="30" height="25" class="civil"></a>
+                    <!--<p class="civil">Développeuse web/web mobile</p>
+                    <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.svg" alt="linkedin" width="30" height="25" class="civil"></a>
+                    <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.svg" alt="GitHub" width="30" height="25" class="civil"></a>-->
+                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.svg" alt="CV" width="30" height="25" class="civil"></a>
                 </div>
             </div>
         </div>
@@ -28,22 +28,6 @@
                 <h2>Compétences</h2>
 	            <div class="timeline">
 		            <ul>
-			            <li>
-                            <div class='time'>
-                                <span>Web</span>
-                            </div>
-                            <div class="content">
-                                <p>Html</p>
-                                <p>CSS</p>
-                                <p>JavaScript</p>
-                                <p>PHP</p>
-                                <p>Git</p>
-                                <p>Vagrant</p>
-                                <p>Ubuntu</p>
-                                <p>Keepass</p>
-                                <p>Photoshop</p>
-                            </div>
-			            </li>			
 			            <li>
                             <div class='time'>
                                 <span>Administratif</span>
@@ -73,15 +57,29 @@
                         </li>
                         <li>
                             <div class='time'>
-                                <span>Recrutement</span>
+                                <span>Ressoursces Humaines</span>
                             </div>
                             <div class="content">
-                                <p>Rencontrer un candidat</p>
-                                <p>Sélectionner un candidat</p>
-                                <p>Tenir les demandes client à jour</p>
-                                <p>Rédiger le compte rendu d'entretien</p>
-                                <p>Terminer les modalités administratives</p>
-                    
+                                <p>Sélectionner et reevoir un candidat </p>
+                                <p>Établissement des contrts TT, paie et <br> facture</p>
+                                <p>Gestion des arrêts maladies et <br> accidents de travail</p>
+                                <p>Gestion de la communications <br> internes et externes</p>
+                                <p>Gestion de divers suivis et plannigs</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class='time'>
+                                <span>Web</span>
+                            </div>
+                            <div class="content">
+                                <p>Html</p>
+                                <p>CSS</p>
+                                <p>JavaScript</p>
+                                <p>PHP</p>
+                                <p>Git</p>
+                                <p>Vagrant</p>
+                                <p>Ubuntu</p>
+                                <p>Keepass</p>
                             </div>
 			            </li>
 		            </ul>
@@ -89,12 +87,12 @@
             </div>
             <div class="sidebar">
                 <ul>
-                    <li><a href="index.html"><img src="images/home.png" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
-                    <li class="en_cours"><a href="competences.html" ><img src="images/competence.png" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
-                    <li><a href="formations.html"><img src="images/formation.png" width="32" height="32" alt="Formations"/><span class="infobulle" >Formations</span></a></li>
-                    <li><a href="experiences.html"><img src="images/experience.png" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
-                    <li><a href="portfolio.html"><img src="images/portfolio.png" width="32" height="32" alt="Portfolio"/><span class="infobulle" >Portfolio</span></a></li>
-                    <li><a href="contact.html"><img src="images/contact.png" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
+                    <li><a href="index.html"><img src="images/home.svg" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
+                    <li class="en_cours"><a href="competences.html" ><img src="images/competence.svg" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
+                    <li><a href="formations.html"><img src="images/formation.svg" width="32" height="32" alt="Formations"/><span class="infobulle" >Formations</span></a></li>
+                    <li><a href="experiences.html"><img src="images/experience.svg" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
+                    <li><a href="motivation.html"><img src="images/motivation.svg" width="32" height="32" alt="Motivation"/><span class="infobulle" >Motivation</span></a></li>
+                    <li><a href="contact.html"><img src="images/contact.svg" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
                 </ul>
                 <div class="sidebar_end"></div>
             </div>
